--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 
         <div>
             <h2 class="section-title" data-cy="hw2-section-title-pre">Любимые фреймворки</h2>
-            <ul class="skills-list" data-cy="hw2-skills-list-pre">
-                <li>React</li>
-                <li>Angular</li>
-                <li>Vue</li>
+            <ul>
+                <li class="skills-list" data-cy="hw2-skills-list-pre">React</li>
+                <li class="skills-list" data-cy="hw2-skills-list-pre">Angular</li>
+                <li class="skills-list" data-cy="hw2-skills-list-pre">Vue</li>
             </ul>
         </div>
         <div>
